--- a/apps/pull-tracker/url-guide.html
+++ b/apps/pull-tracker/url-guide.html
@@ -53,10 +53,12 @@ description: "가챠 기록 URL을 얻는 방법 안내"
 
       <div class="step-row">
   
-        <div class="content guide-card" data-step="5"><p class="guide-text" id="m1s2">다음 프로그램을 다운받아 실행하세요.</p>
+        <div class="content guide-card" data-step="5"><p class="guide-text" id="m1s2">다음 프로그램을 다운받아 실행하세요.</p> 
+            <a class="guide-text"  href="https://github.com/iantCode/P5X_Gacha_Link" target="_blank">source code</a>
           <div class="pill-row">
-            <a class="pill" id="downloadBtn" href="https://iant.kr/gacha" target="_blank">프로그램 다운로드</a>
+            <a class="pill" id="downloadBtn" href="https://iant.kr/gacha" target="_blank" style="text-decoration: none;">프로그램 다운로드</a>
             <button class="btn-outline" id="openProgInfo">프로그램에 대하여</button>
+
           </div>
         </div>
       </div>
@@ -81,7 +83,7 @@ description: "가챠 기록 URL을 얻는 방법 안내"
 
       <div class="step-row">
         <div class="content guide-card" data-step="9"><p class="guide-text" id="m1s6">복사된 URL 입력하기</p>
-          <a class="pill" id="goInput1" href="{{ site.baseurl }}/pull-tracker/">Go Back</a>
+          <a class="pill" id="goInput1" href="{{ site.baseurl }}/pull-tracker/" style="text-decoration: none;">Go Back</a>
         </div>
       </div>
     </div>
@@ -91,13 +93,13 @@ description: "가챠 기록 URL을 얻는 방법 안내"
       <div class="step-row">
   
         <div class="content guide-card" data-step="4"><p class="guide-text" id="m2s1">다음 링크에서 방법을 확인하세요.</p>
-          <a class="pill" href="https://github.com/mpvio/p5xsummons" target="_blank">p5xsummons</a>
+          <a class="pill" href="https://github.com/mpvio/p5xsummons" target="_blank" style="text-decoration: none;">p5xsummons</a>
         </div>
       </div>
 
       <div class="step-row">
         <div class="content guide-card" data-step="5"><p class="guide-text" id="m2s2">복사된 URL 입력하기</p>
-          <a class="pill" id="goInput2" href="{{ site.baseurl }}/pull-tracker/">Go Back</a>
+          <a class="pill" id="goInput2" href="{{ site.baseurl }}/pull-tracker/" style="text-decoration: none;">Go Back</a>
         </div>
       </div>
     </div>
