--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -26,6 +26,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
         <span id="ptUserName"></span>
         <button id="ptLoginBtn" class="auth-btn">로그인</button>
         <button id="ptLogoutBtn" class="auth-btn" style="display:none;">로그아웃</button>
+        <span id="ptScopeNote" class="scope-note">※ 이 사이트에서 생성한 파일만 읽고 쓸 수 있습니다.</span>
     </div>
 
     <section class="card-style" style="padding:16px; position:relative;">
