--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -32,10 +32,10 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
     <section class="card-style" style="padding:16px; position:relative;">
         <div style="display:flex; flex-direction:column; gap:12px; max-width:860px;">
             <div class="url-row" style="gap:8px;">
-                <div style="display:flex;gap:8px;align-items:center;">
+                <div style="display:flex;gap:8px;align-items:center;flex-wrap: wrap;">
                     <button id="openGuideBtn" class="url-btn"><span class="help-icon"><svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="9" cy="9" r="8.5" stroke="currentColor" stroke-opacity="0.1" fill="rgba(255,255,255,0.05)"/><path d="M7.2 7.2C7.2 6.32 7.92 5.6 8.8 5.6H9.2C10.08 5.6 10.8 6.32 10.8 7.2C10.8 7.84 10.48 8.4 9.96 8.68L9.6 8.88C9.28 9.04 9.2 9.2 9.2 9.6V10.4M9 12.4V13.2" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" stroke-opacity="0.3"/></svg></span><span style="margin-left:6px;">URL 획득방법</span></button>
                 </div>
-                <div style="display:flex;gap:8px;align-items:center;">
+                <div style="display:flex;gap:8px;align-items:center;flex-wrap: wrap;">
                     <input id="sourceUrl" type="url" inputmode="url" placeholder="https://..." class="url-input">
                     <button id="startBtn" class="url-btn primary">가져오기</button>
                     <button id="clearBtn" class="url-btn secondary">초기화</button>
