--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -88,6 +88,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
                 <option value="CN">CN</option>
                 <option value="TW">TW</option>
             </select>
+            <span id="globalStatsNote" class="global-note"></span>
         </div>
         <div id="globalInfoCards" class="info-cards-grid"></div>
         <div class="card-style chart-card">
