--- a/apps/pull-tracker/url-guide.html
+++ b/apps/pull-tracker/url-guide.html
@@ -107,7 +107,43 @@ description: "가챠 기록 URL을 얻는 방법 안내"
       </div>
     </div>
 
-
+<!-- 광고 -->
+<div class="ads-container responsive-padding">
+    <ins class="adsbygoogle"
+    style="display:block"
+    data-ad-format="fluid"
+    data-ad-layout-key="-gc+3n+7a-ag-4h"
+    data-ad-client="ca-pub-5862324369257695"
+    data-ad-slot="5373524213"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+</div>
+    
+<div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 24px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
+<ins class="adsbygoogle"
+    style="display:inline-block;width:970px;height:90px"
+    data-ad-client="ca-pub-5862324369257695"
+    data-ad-slot="9244892982"></ins>
+</div>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<div style="height: 12px;"></div>
+<!---->
+<style>
+    @media (max-width: 1440px) {
+        .AD-bottom {
+            display: none !important;
+        }
+    }
+    @media (min-width: 1440px) {
+        .ads-container {
+            display: none !important;
+        }
+    }
+    .responsive-padding { margin: 20px 20px 20px 0; padding: 0 0; }
+    @media (max-width: 1200px) { .responsive-padding {margin: 20px 0 0px 0; padding: 0; } }
+</style>
+</div>
 
   </div>
 
