--- a/apps/pull-tracker/global-stats.html
+++ b/apps/pull-tracker/global-stats.html
@@ -59,6 +59,45 @@ description: "P5X 계약 전체 통계 (캐릭터/한정/무기)"
     <div id="gsCards" class="gs-lists"></div>
   </section>
 
+<!-- 광고 -->
+<div class="ads-container responsive-padding">
+    <ins class="adsbygoogle"
+    style="display:block"
+    data-ad-format="fluid"
+    data-ad-layout-key="-gc+3n+7a-ag-4h"
+    data-ad-client="ca-pub-5862324369257695"
+    data-ad-slot="5373524213"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+</div>
+    
+<div id="ad-unit-bottom" class="AD-bottom" style="margin-top: 24px; text-align: center; align-items: center; display: flex; justify-content: center;"> 
+<ins class="adsbygoogle"
+    style="display:inline-block;width:970px;height:90px"
+    data-ad-client="ca-pub-5862324369257695"
+    data-ad-slot="9244892982"></ins>
+</div>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<div style="height: 12px;"></div>
+<!---->
+<style>
+    @media (max-width: 1440px) {
+        .AD-bottom {
+            display: none !important;
+        }
+    }
+    @media (min-width: 1440px) {
+        .ads-container {
+            display: none !important;
+        }
+    }
+    .responsive-padding { margin: 20px 20px 20px 0; padding: 0 0; }
+    @media (max-width: 1200px) { .responsive-padding {margin: 20px 0 0px 0; padding: 0; } }
+</style>
+</div>
+
+
   <script>
     // 언어별 SEO/메타 동적 설정 및 제목/내비 텍스트 적용
     (function(){
