--- a/apps/pull-tracker/global-stats.html
+++ b/apps/pull-tracker/global-stats.html
@@ -131,7 +131,7 @@ description: "P5X 계약 전체 통계 (캐릭터/한정/무기)"
   <script src="{{ site.baseurl }}/data/jp/characters/character_weapon.js?v={{ site.time | date: '%s' }}"></script>
   <script src="{{ site.baseurl }}/apps/pull-tracker/global-stats.js?v={{ site.time | date: '%s' }}"></script>
   <script>
-    document.addEventListener('DOMContentLoaded', ()=>{ try { if (window.Navigation && typeof Navigation.load === 'function') { Navigation.load('pull-tracker'); } } catch(_){} });
+    document.addEventListener('DOMContentLoaded', ()=>{ try { if (window.Navigation && typeof Navigation.load === 'function') { Navigation.load('pullTracker_global'); } } catch(_){} });
   </script>
 </div>
 
