--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -96,7 +96,7 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             if (window.Navigation && typeof Navigation.load === 'function') {
-                try { Navigation.load('pull-tracker'); } catch(_) {}
+                try { Navigation.load('pullTracker_individual'); } catch(_) {}
             }
             // expose base url to JS
             try { window.BASE_URL = '{{ site.baseurl }}'; } catch(_) {}
