--- a/apps/pull-tracker/url-guide.html
+++ b/apps/pull-tracker/url-guide.html
@@ -258,8 +258,8 @@ description: "가챠 기록 URL을 얻는 방법 안내"
             m1s1:'Run P5X on your PC.', m1s2:'Download P5X_Gacha_Tools from the following link, unzip it, and run it.', m1s3:'Open the gacha history in game P5X. Errors are expected.', m1s4:'Select region, click [Try Find URL], then press Copy to obtain the URL.', m1s5:'Close the program.', m1s6:'Go to URL input',
             prog:'About the Program', dl:'Program Link', m2s1:'See the following link for method 2.', m2s2:'Go to URL input' },
           jp: { back: 'ガチャ履歴', current:'URL ガイド', title:'URL ガイド',
-            s1:'FAQ を確認してください。', s2:'現在は PC Windows の方法のみ提供しています。', s3:'方法を選択してください. プログラムを使用 / 直接 URL 抽出',
-            m1s1:'PC で P5X を起動します。', m1s2:'次のリンクからP5X_Gacha_Toolsをダウンロードして解凍して実行してください。', m1s3:'ゲームP5Xでガチャ履歴を開く。エラーは正常です。', m1s4:'地域を選択後［Try Find URL］をクリックし、Copy で URL を取得してください。', m1s5:'プログラムを終了してください。', m1s6:'URL入力へ',
+            s1:'FAQ を確認してください。', s2:'現在は PC Windows の方法のみ提供しています。', s3:'以下の2つからURL取得方法を選択してください。1. 専用のプログラムを使用、2. URLを直接抽出',
+            m1s1:'PC で P5X を起動します。', m1s2:'プログラムをダウンロードから\'P5X_Gacha_Tools\'をダウンロード/解凍して、プrグラムを起動してください。', m1s3:'P5Xで契約履歴画面を開いてください。この時、P5X上でエラーが表示されますが、問題ありません。', m1s4:'地域を選択後［Try Find URL］をクリックし、Copy で URL を取得してください。', m1s5:'プログラムを終了してください。', m1s6:'URL入力へ',
             prog:'プログラムについて', dl:'プログラムをダウンロード', m2s1:'次のリンクで方法をご確認ください。', m2s2:'URL入力へ' }
         };
         const t = map[lang]||map.kr;
