--- a/apps/pull-tracker/global-stats.html
+++ b/apps/pull-tracker/global-stats.html
@@ -10,7 +10,7 @@ description: "P5X 계약 전체 통계 (캐릭터/한정/무기)"
 
 <div class="main-wrapper">
   <div class="navigation-path">
-    <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}"><span data-lang-key="home">홈</span></a>`);</script>
+    <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}"><span data-lang-key="home" id="navhome">홈</span></a>`);</script>
     <span class="separator">/</span>
     <span class="current-page" id="navCurrent">Global Stats</span>
   </div>
