--- a/apps/pull-tracker/url-guide.html
+++ b/apps/pull-tracker/url-guide.html
@@ -8,7 +8,7 @@ description: "가챠 기록 URL을 얻는 방법 안내"
 
 <div class="main-wrapper">
   <div class="navigation-path">
-    <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}"><span data-lang-key="home">홈</span></a>`);</script>
+    <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}" id="navhome"><span data-lang-key="home">홈</span></a>`);</script>
     <span class="separator">/</span>
     <a href="{{ site.baseurl }}/pull-tracker/"><span id="navBack">Pull Tracker</span></a>
     <span class="separator">/</span>
@@ -249,20 +249,21 @@ description: "가챠 기록 URL을 얻는 방법 안내"
       try {
         const params = new URLSearchParams(location.search); const lang = (params.get('lang')||'kr').toLowerCase();
         const map = {
-          kr: { back: '계약 트래커', current:'URL 가이드', title:'URL 가이드',
+          kr: { navhome: '홈', back: '계약 트래커', current:'URL 가이드', title:'URL 가이드',
             s1:'FAQ를 확인하세요.', s2:'현재는 PC Windows에서의 방법만 제공하고 있습니다.', s3:'원하는 방법을 선택하세요. 제작된 프로그램 사용 / 직접 URL 추출',
             m1s1:'PC에서 P5X을 실행하세요.', m1s2:'다음 링크에서 P5X_Gacha_Tools를 다운받아 압축을 풀고 실행하세요.', m1s3:'P5X에서 계약 기록을 확인하세요. ※ 오류가 나는 것은 정상입니다.', m1s4:'지역을 선택한 후 [Try Find URL] 버튼을 클릭하고 Copy를 눌러 URL을 획득하세요.', m1s5:'프로그램을 닫아주세요.', m1s6:'복사된 URL을 아래 링크에서 입력해주세요.',
             prog:'프로그램에 대하여', dl:'프로그램 제공 링크', m2s1:'다음 링크에서 방법을 확인하세요.', m2s2:'복사된 URL을 아래 링크에서 입력해주세요.' },
-          en: { back: 'Pull Tracker', current:'URL Guide', title:'URL Guide',
+          en: { navhome: 'Home', back: 'Pull Tracker', current:'URL Guide', title:'URL Guide',
             s1:'Check the FAQ.', s2:'Currently, only the PC Windows method is provided.', s3:'Choose a method. Use the program / Direct URL extraction',
             m1s1:'Run P5X on your PC.', m1s2:'Download P5X_Gacha_Tools from the following link, unzip it, and run it.', m1s3:'Open the gacha history in game P5X. Errors are expected.', m1s4:'Select region, click [Try Find URL], then press Copy to obtain the URL.', m1s5:'Close the program.', m1s6:'Go to URL input',
             prog:'About the Program', dl:'Program Link', m2s1:'See the following link for method 2.', m2s2:'Go to URL input' },
-          jp: { back: 'ガチャ履歴', current:'URL ガイド', title:'URL ガイド',
+          jp: { navhome: 'ホーム', back: 'ガチャ履歴', current:'URL ガイド', title:'URL ガイド',
             s1:'FAQ を確認してください。', s2:'現在は PC Windows の方法のみ提供しています。', s3:'以下の2つからURL取得方法を選択してください。1. 専用のプログラムを使用、2. URLを直接抽出',
             m1s1:'PC で P5X を起動します。', m1s2:'プログラムをダウンロードから\'P5X_Gacha_Tools\'をダウンロード/解凍して、プrグラムを起動してください。', m1s3:'P5Xで契約履歴画面を開いてください。この時、P5X上でエラーが表示されますが、問題ありません。', m1s4:'地域を選択後［Try Find URL］をクリックし、Copy で URL を取得してください。', m1s5:'プログラムを終了してください。', m1s6:'URL入力へ',
             prog:'プログラムについて', dl:'プログラムをダウンロード', m2s1:'次のリンクで方法をご確認ください。', m2s2:'URL入力へ' }
         };
         const t = map[lang]||map.kr;
+        document.getElementById('navhome').textContent = t.navhome;
         document.getElementById('navBack').textContent = t.back;
         document.getElementById('guideCurrent').textContent = t.current;
         const pt = document.getElementById('pageTitle'); if (pt) pt.textContent = t.title;
