--- a/apps/pull-tracker/url-guide.html
+++ b/apps/pull-tracker/url-guide.html
@@ -259,7 +259,7 @@ description: "가챠 기록 URL을 얻는 방법 안내"
             prog:'About the Program', dl:'Program Link', m2s1:'See the following link for method 2.', m2s2:'Go to URL input' },
           jp: { navhome: 'ホーム', back: 'ガチャ履歴', current:'URL ガイド', title:'URL ガイド',
             s1:'FAQ を確認してください。', s2:'現在は PC Windows の方法のみ提供しています。', s3:'以下の2つからURL取得方法を選択してください。1. 専用のプログラムを使用、2. URLを直接抽出',
-            m1s1:'PC で P5X を起動します。', m1s2:'プログラムをダウンロードから\'P5X_Gacha_Tools\'をダウンロード/解凍して、プrグラムを起動してください。', m1s3:'P5Xで契約履歴画面を開いてください。この時、P5X上でエラーが表示されますが、問題ありません。', m1s4:'地域を選択後［Try Find URL］をクリックし、Copy で URL を取得してください。', m1s5:'プログラムを終了してください。', m1s6:'URL入力へ',
+            m1s1:'PC で P5X を起動します。', m1s2:'\'プログラムをダウンロード\'からP5X_Gacha_Toolsをダウンロード/解凍して、プログラムを起動してください。', m1s3:'P5Xで契約履歴画面を開いてください。この時、P5X上でエラーが表示されますが、問題ありません。', m1s4:'地域を選択後［Try Find URL］をクリックし、Copy で URL を取得してください。', m1s5:'プログラムを終了してください。', m1s6:'URL入力へ',
             prog:'プログラムについて', dl:'プログラムをダウンロード', m2s1:'次のリンクで方法をご確認ください。', m2s2:'URL入力へ' }
         };
         const t = map[lang]||map.kr;
