--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -112,7 +112,7 @@ alternate_urls:
                     <div class="supporter-tier">
                         <h4>Special Thanks</h4>
                         <ul>
-                            <li>Data Provider : Iant</li>
+                            <li>Data/Pull Tracker : Iant</li>
                             <li>Translation : RedHarv</li>
                             <li>Translation : kai</li>
                         </ul>
@@ -120,17 +120,19 @@ alternate_urls:
                     <div class="supporter-tier">
                         <h4>Supporters</h4>
                         <ul>
-                            <li>시아</li>
-                            <li>임*훈</li>
-                            <li>Ian</li>
-                            <li>김*현</li>
-                            <li>Arthur</li>
-                            <li>김*환</li>
-                            <li>카미유</li>
-                            <li>ochette</li>
-                            <li>kai</li>
-                            <li>Sages</li>
-                            <li>ue</li>
+                            <li style="color:#ffd34e; font-weight:700;">시아</li> <!--99$ 25/07/10-->
+                            <li style="color:#fff8e1">Arthur</li> <!--30$ 25/08/10-->
+                            <li style="color:#ad7326">안*현</li> <!--30000 25/09/10-->
+                            <li>ue</li> <!--15$ 25/09/09-->
+                            <li>kai</li> <!--9$ 25/08/22-->
+                            <li>김*환</li> <!--9$ 25/07/18-->
+                            <li>임*훈</li><!--10000 25/07/06-->
+                            <li>김*현</li> <!--10000 25/05/18-->
+                            <li>카미유</li> <!--10000 25/07/18-->
+                            <li>ochette</li> <!--6$ 25/06/18-->
+                            <li>Sages</li> <!--6$ 25/09/06-->
+                            <li>Nerecky</li> <!--3$ 25/09/10-->
+                            <li>Ian</li><!--3000 25/06/20-->
                         </ul>
                     </div>
                 </div>
