--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -48,6 +48,9 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
+                    <option value="-mrstasilo">-mrstasilo</option>
+                    <option value="-mrstasilo-twice">-mrstasilo-twice</option>
+                    <option value="-add">-add</option>
                 </select>
                 <button id="applyExampleBtn" class="url-btn">예시 적용</button>
             </div>
