--- a/apps/gallery/index.html
+++ b/apps/gallery/index.html
@@ -89,7 +89,7 @@ custom_data: ["characters/characters.js"]
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     if (typeof Navigation !== 'undefined') {
-      Navigation.load();
+      Navigation.load('gallery');
     }
   });
   </script>
