--- a/apps/pull-tracker/index.html
+++ b/apps/pull-tracker/index.html
@@ -54,6 +54,14 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
                 </select>
                 <button id="applyExampleBtn" class="url-btn">예시 적용</button>
             </div>
+            <!-- Import / Export Row -->
+            <div class="url-row" style="gap:8px;">
+                <div style="display:flex;gap:8px;align-items:center;flex-wrap: wrap;">
+                    <button id="exportBtn" class="url-btn secondary"></button>
+                    <button id="importBtn" class="url-btn secondary"></button>
+                    <input id="importFile" type="file" accept="application/json" style="display:none;" />
+                </div>
+            </div>
             <div id="info" class="url-info"></div>
             <div id="status" class="url-status"></div>
             <pre id="result" class="raw-response" style="display:none;"></pre>
@@ -91,11 +99,13 @@ description: "P5X 가챠 Pull Tracker (URL 입력 후 서버에서 기록 조회
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <script>window.GOOGLE_CLIENT_ID = window.GOOGLE_CLIENT_ID || '42431189158-0quc6ja0qm079r5gt4b6f56m4lqb930e.apps.googleusercontent.com';</script>
-    <script src="{{ site.baseurl }}/apps/pull-tracker/merge-engine.js?v={{ site.time | date: '%s' }}"></script>
-    <script src="{{ site.baseurl }}/apps/pull-tracker/lostlist.js?v={{ site.time | date: '%s' }}"></script>
-    <script src="{{ site.baseurl }}/apps/pull-tracker/charts.js?v={{ site.time | date: '%s' }}"></script>
-    <script src="{{ site.baseurl }}/apps/pull-tracker/global-stats.js?v={{ site.time | date: '%s' }}"></script>
-    <script src="{{ site.baseurl }}/apps/pull-tracker/pull-tracker.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="{{ site.baseurl }}/apps/pull-tracker/js/merge-engine.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="{{ site.baseurl }}/apps/pull-tracker/js/lostlist.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="{{ site.baseurl }}/apps/pull-tracker/js/charts.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="{{ site.baseurl }}/apps/pull-tracker/js/global-stats.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="{{ site.baseurl }}/apps/pull-tracker/js/export.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="{{ site.baseurl }}/apps/pull-tracker/js/import.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="{{ site.baseurl }}/apps/pull-tracker/js/pull-tracker.js?v={{ site.time | date: '%s' }}"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
 
