--- a/apps/wonder-weapon/index.html
+++ b/apps/wonder-weapon/index.html
@@ -46,7 +46,7 @@ alternate_urls:
   </div>
 
   <!-- Cards -->
-  <div class="weapon-cards" id="weaponCards"></div>
+  <div class="weapon-cards drag-me" id="weaponCards"></div>
   
     <style>
         .inline-ad { margin: 16px 0 0px 0; text-align: center; display: flex; justify-content: center; align-items: center; }
