--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -78,7 +78,7 @@ alternate_urls:
         </div>
 
         <div class="about-section" id="exchange-code-section">
-            <button id="exchangeCodeButton" class="donate-button">KR 교환코드 (v4.3.1)</button>
+            <button id="exchangeCodeButton" class="donate-button">KR 교환코드 (v4.4.1)</button>
         </div>
 
         <div class="about-section">
@@ -333,7 +333,7 @@ alternate_urls:
 <div id="exchangeCodeModal" class="modal">
     <div class="modal-content">
         <span class="close-button">&times;</span>
-        <h3>KR 교환코드 (v4.3.1)</h3>
+        <h3>KR 교환코드 (v4.4.1)</h3>
         <p class="exchange-notice">
             한국 서버 크리에이터 프로그램을 통해 제공되는 교환코드입니다. 비정기적으로 업데이트 될 수 있습니다.
         </p>
@@ -523,36 +523,36 @@ alternate_urls:
     function initializePageContent() {
         
         // 교환코드 목록 (새로운 코드로 업데이트하려면 이 문자열만 수정하면 됩니다)
-        const exchangeCodes = `21333521UETIMJEZ
-42395216UGCXZGKV
-58648538UASNJWQH
-28287001UCBPKBXU
-88260110UDRLGIQV
-81905277UMATRKIY
-78451752UNWCPAMC
-99860020UIGRLLAE
-26232937UJVAVQQU
-70929513UUFVBHNZ
-28374973UVUFZTHR
-14584037UREKQJQX
-52916733USJZHVCD
-15693541UTZIDQGN
-45214464UPIXMHHW
-61873477UQYNBIBI
-82702629UYHPCNAY
-07922499UZXLCKZU
-57533149VFNTOVUQ
-04364151VGQCYVQP
-56314196VBMRDDZO
-01819159VCPAEAZI
-62488976VLLVEATQ
-18207277VMOFXMAQ
-93126685VHDKUDYN
-44596323VISZRBGF
-09314421VKCICRVP
-65698561VURXGRSW
-10409459VWBNUBML
-40556640VRWPZNNM`;
+        const exchangeCodes = `14304377KZKKCHVG
+23200694UEZZUPWC
+83755731UGJITCAY
+47051430UAYXCNRY
+18709433UCINWXMY
+57143774UDXPZRKV
+72375714UMHLVPAL
+83389695UNQTFVHN
+18278154UINCXYGX
+59040068UJPRBHZV
+15899588UUMAKPIQ
+31729574UVOVAFMA
+10591569URLFCFTD
+16354250USTKAURP
+00590346UOCZBQYE
+73419864UPSIGHLQ
+30104424UXBXTUUH
+16636701UYRNHDAK
+56702754VEAPNJJI
+17436638VFWLHPNP
+88028922VAGTUZIS
+86694769VBVCIJXL
+15755961VDFRIDWU
+59373610VLUAUECH
+90275126VNEVRWKM
+23298535VHKFRZBQ
+38474464VIZKODCI
+63954140VKIZWZZZ
+27935360VUYIRBEQ
+03003539VWHXXISH`;
 
         // 교환코드 동적 생성 함수
         function generateExchangeCodes() {
